margin top added to subtitle image to avoid overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ p {
   background-image: url(/Ben-Cruises-Portfolio-Page/images/GettyImages-1224500457-e1643727629417.png);
   background-size: 100%;
   color: white;
+  margin-top: 20px;
 }
 
 .subtitle-span {
